--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
 asgiref==3.8.1
 Django==5.1.7
 django-environ==0.12.0
+django-filter==25.1
 djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
+drf-yasg==1.21.10
 Faker==37.1.0
+inflection==0.5.1
+packaging==25.0
+PyJWT==2.9.0
 PyMySQL==1.1.1
+pytz==2025.2
+PyYAML==6.0.2
 sqlparse==0.5.3
 tzdata==2025.2
+uritemplate==4.1.1
